--- a/teyake.com/about_us/about_us.html
+++ b/teyake.com/about_us/about_us.html
@@ -75,8 +75,8 @@
             <div class="header-right flex items-center justify-between">
                 <div class="sign-in flex flex-col items-center justify-center gap-1">
                     <div class="flex gap-4">
-                        <a href="auth/signin.html"><button type="button">Sign In</button></a>
-                        <a href="auth/signup.html"><button type="button">Sign Up</button></a>
+                        <a href="../auth/signin.html"><button type="button">Sign In</button></a>
+                        <a href="../auth/signup.html"><button type="button">Sign Up</button></a>
                     </div>
                     <p class="text-center">Teachers</p>
                 </div>
